# msr605x-ubuntu

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  build-packages.sh  com.github.msr605x.yaml  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-packages.yml
data/: 99-msr605x.rules  com.github.msr605x.desktop  style.css
debian/: changelog  control  copyright  postinst  postrm  rules
snap/: snapcraft.yaml
src/: __init__.py  app.py  main.py  window.py
src/msr605x/: __init__.py  commands.py  constants.py  device.py  parser.py
src/ui/: __init__.py  erase_panel.py  read_panel.py  settings_panel.py  write_panel.py
src/utils/: __init__.py  file_io.py
tests/: __init__.py  test_parser.py
